// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexifier can exclude files and folders 1`] = `
"2
└── a.html
"
`;

exports[`indexifier can ignore folders that do not contain files 1`] = `
"3
├── a.html
└─┬ ignore
  └── me
"
`;

exports[`indexifier can ignore folders that do not contain files 2`] = `
"3
└── a.html
"
`;

exports[`indexifier should be able to transform a directory structure as-is 1`] = `
"1
├─┬ A
│ └── c.html
├── a.html
├── a.txt
└── b.html
"
`;

exports[`indexifier should be able to transform a directory structure html to HTML 1`] = `
"<!doctype html>
<html>
    <head>
        <meta charset=\\"UTF-8\\">
        <title>1</title>
        <style>
            * {
                font-family: monospace;
            }
        </style>
    </head>
    <body>
        <pre>
<a href=\\"./\\">1</a>
├─┬ <a href=\\"./A\\">A</a>
│ └── <a href=\\"./A/c.html\\">c.html</a>
├── <a href=\\"./a.html\\">a.html</a>
├── <a href=\\"./a.txt\\">a.txt</a>
└── <a href=\\"./b.html\\">b.html</a>
        </pre>
    </body>
</html>
"
`;

exports[`indexifier should be able to transform a directory structure html w/o linking folders 1`] = `
"<!doctype html>
<html>
    <head>
        <meta charset=\\"UTF-8\\">
        <title>1</title>
        <style>
            * {
                font-family: monospace;
            }
        </style>
    </head>
    <body>
        <pre>
1
├─┬ A
│ └── <a href=\\"./A/c.html\\">c.html</a>
├── <a href=\\"./a.html\\">a.html</a>
├── <a href=\\"./a.txt\\">a.txt</a>
└── <a href=\\"./b.html\\">b.html</a>
        </pre>
    </body>
</html>
"
`;

exports[`indexifier should be able to transform a directory structure limited to maxDepth of 1 1`] = `
"fixtures
├── 1
├── 2
└── 3

exports[`indexifier should be able to transform a directory structure with filtering by extensions 1`] = `
"1
├─┬ A
│ └── c.html
├── a.html
└── b.html
"
`;

exports[`indexifier should be able to transform a directory structure with filtering by extentions and regexp 1`] = `
"1
└── a.html
"
`;

exports[`indexifier should be able to transform a directory structure with filtering by regexp 1`] = `
"1
├── a.html
└── a.txt
"
`;
